--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -25,3 +25,13 @@ body {
   margin-bottom: 15px;
   padding: 20px;
 }
+
+.navbar-inverse .navbar-brand {
+  color: #FFF;
+  font-family: 'ostrich_sans_roundedmedium', sans-serif;
+  font-size: 26px;
+}
+
+#hungry-heart {
+  font-size: 20px;
+}
