--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">I ❤️ Sushi</a>
+      <a class="navbar-brand" href="#">WE<span id="hungry-heart">❤️</span>SUSHI</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
