--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -8,6 +8,10 @@ body {
   font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
 
+.clear {
+  clear: both;
+}
+
 .navbar.navbar-inverse {
   background: url('/assets/dark_fish_skin.png');
   border-radius: 0;
