Shows all comments on the place show page

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -41,8 +41,21 @@
 </div>
 
 <div class="clear"></div>
+
 <%= simple_form_for @comment, :url => place_comments_path(@place) do |f| %>
   <%= f.input :message %>
   <%= f.input :rating %>
   <%= f.submit "Add a Comment", :class => 'btn btn-primary' %>
+<% end %>
+
+<h1>Comments</div>
+
+<% @place.comments.each do |comment| %>
+  <div>
+    <blockquote>
+      <b><%= comment.rating %></b> -
+         <%= comment.message %>
+      <small><%= comment.user.email %></small>
+    </blockquote>
+  </div>
 <% end %>
