Styles comment section

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -42,11 +42,6 @@
 
 <div class="clear"></div>
 
-<!-- Button trigger modal -->
-<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Add a comment
-</button>
-
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -58,7 +53,7 @@
       <%= simple_form_for @comment, :url => place_comments_path(@place) do |f| %>
         <div class="modal-body">
             <%= f.input :message %>
-            <%= f.input :rating, :as => :select, :collection => Comment::RATINGS %>  
+            <%= f.input :rating, :as => :select, :collection => Comment::RATINGS %>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -69,10 +64,19 @@
   </div>
 </div>
 
-<h1>Comments</div>
+<div class="col-xs-10 col-xs-offset-1">
+  <h1 class="pull-left">Comments</div>
+  <!-- Button trigger modal -->
+  <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+    Add a comment
+  </button>
+</div>
+
+<div class="clear"></div>
+
 
 <% @place.comments.each do |comment| %>
-  <div>
+  <div class="col-xs-12 col-sm-6">
     <blockquote>
       <% if comment.humanized_rating.present? %>
         <b><%= comment.humanized_rating %></b> -
