--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,6 +7,18 @@
     <% if place.user.present? %>
       <small><%= place.user.email %>
     <% end %>
+
+    <% if place.comments.present? %>
+      <div class="col-xs-12">
+        <blockquote>
+          <% if place.comments.last.humanized_rating.present? %>
+            <b><%= place.comments.humanized_rating %></b> -
+          <% end %>
+          <%= place.comments.last.message %>
+          <small><%= place.comments.last.user.email %></small>
+        </blockquote>
+      </div>
+    <% end %>
   </div>
 <% end %>
 
