--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -12,7 +12,7 @@
       <div class="col-xs-12">
         <blockquote>
           <% if place.comments.last.humanized_rating.present? %>
-            <b><%= place.comments.humanized_rating %></b> -
+            <b><%= place.comments.last.humanized_rating %></b> -
           <% end %>
           <%= place.comments.last.message %>
           <small><%= place.comments.last.user.email %></small>
