--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -42,6 +42,12 @@
 
 <div class="clear"></div>
 
+<!-- Photos upload module -->
+<%= simple_form_for @photo do |f| %>
+  <%= f.input :caption %>
+  <%= f.button :submit %>
+<% end %>
+
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
