Finishes Carrierwaves integration

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -31,6 +31,7 @@
   <br />
 
   <% @place.photos.each do |photo| %>
+    <%= image_tag photo.picture %>
     <%= photo.caption %>
   <% end %>
 
@@ -49,6 +50,7 @@
 <!-- Photos upload module -->
 <%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
   <%= f.input :caption %>
+  <%= f.input :picture %>.
   <%= f.button :submit %>
 <% end %>
 
