--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -35,8 +35,13 @@
     <%= photo.caption %>
   <% end %>
 
+  <br />
+
   <div class="pull-right">
     <% if current_user && current_user == @place.user %>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myPhotoModal">
+        Add a picture
+      </button>
       <%= link_to 'Edit', edit_place_path(@place), :class => 'btn btn-primary' %>
       <%= link_to 'Destroy', place_path(@place), :method => :delete,
                                                  :data => { :confirm => 'Are you sure you want to delete this?'},
@@ -47,12 +52,28 @@
 
 <div class="clear"></div>
 
-<!-- Photos upload module -->
-<%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
-  <%= f.input :picture %>
-  <%= f.input :caption %>
-  <%= f.button :submit %>
-<% end %>
+<!-- Photo Modal -->
+<div class="modal fade" id="myPhotoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Select your picture</h4>
+      </div>
+      <!-- Photos upload module -->
+      <%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
+        <div class="modal-body">
+          <%= f.input :picture %>
+          <%= f.input :caption %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <%= f.submit "Add Picture", :class => "btn btn-primary" %>
+      </div>
+    <% end %>
+    </div>
+  </div>
+</div>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -76,25 +97,24 @@
   </div>
 </div>
 
-<div class="col-xs-10 col-xs-offset-1">
-  <h1 class="pull-left">Comments</div>
+<div class="col-sm-10 col-sm-offset-1">
+  <h1 class="pull-left">Comments</h1>
   <!-- Button trigger modal -->
   <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
     Add a comment
   </button>
+
+
+  <div class="clear"></div>
+
+
+  <% @place.comments.each do |comment| %>
+      <blockquote>
+        <% if comment.humanized_rating.present? %>
+          <b><%= comment.humanized_rating %></b> -
+        <% end %>
+        <%= comment.message %>
+        <small><%= comment.user.email %></small>
+      </blockquote>
+  <% end %>
 </div>
-
-<div class="clear"></div>
-
-
-<% @place.comments.each do |comment| %>
-  <div class="col-xs-12 col-sm-6">
-    <blockquote>
-      <% if comment.humanized_rating.present? %>
-        <b><%= comment.humanized_rating %></b> -
-      <% end %>
-      <%= comment.message %>
-      <small><%= comment.user.email %></small>
-    </blockquote>
-  </div>
-<% end %>
