--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -9,27 +9,27 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <%= image_tag 'slider1.jpg' %>
+      <%= image_tag 'slider1.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
         Find the best sushi places
       </div>
     </div>
 
     <div class="item">
-      <%= image_tag 'slider2.jpg' %>
+      <%= image_tag 'slider2.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
         Find the best sushi places
       </div>
     </div>
 
     <div class="item">
-      <%= image_tag 'slider3.jpg' %>
+      <%= image_tag 'slider3.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
         Find the best sushi places
       </div>
     </div>
 
-    ...
+    <! -- ... -->
   </div>
 
   <!-- Controls -->
