--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
-<div class="booyah-box">
+<div class="booyah-box container">
   <div class="col-xs-4">
-    <%= image_tag 'user.png' %>
+    <%= image_tag 'user.png', :class => 'profile-img' %>
   </div>
 
-  <div class="col-xs-8>"
+  <div class="col-xs-6>"
     <h1><%= @user.email %></h1>
     <h3>Member since: <%= @user.created_at.strftime("%B %d, %Y") %></h3>
     <h4><%= @user.comments.count %> total comments</h4>
