More fixes to carousel images on mobile devices

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -55,7 +55,7 @@
 
     <% place.photos.each do |photo| %>
       <div class="col-xs-12 col-sm-6">
-        <%= image_tag photo.picture, :class => 'img-responsive' %>
+        <%= image_tag photo.picture, :class => 'img-thumbnail' %>
       </div>
     <% end %>
 
