--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -31,7 +31,7 @@
   <br />
 
   <% @place.photos.each do |photo| %>
-    <%= image_tag photo.picture, :class => 'places-img' %>
+    <%= image_tag photo.picture, :class => 'img-thumbnail' %>
     <%= photo.caption %>
   <% end %>
 
